tests/nullable/nullable.exp
Error ----------------------------------------------------------------------------------------------------- error.js:8:8

Cannot cast `any` to number because null or undefined [1] is incompatible with number [2]. [incompatible-cast]

   error.js:8:8
   8| ((any: ?number): number);
             ^^^^^^^ [1]

References:
   error.js:8:18
   8| ((any: ?number): number);
                       ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- error.js:9:8

Cannot cast `any` to null because null or undefined [1] is incompatible with null [2]. [incompatible-cast]

   error.js:9:8
   9| ((any: ?number): null);
             ^^^^^^^ [1]

References:
   error.js:9:18
   9| ((any: ?number): null);
                       ^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- error.js:9:9

Cannot cast `any` to null because number [1] is incompatible with null [2]. [incompatible-cast]

   error.js:9:9
   9| ((any: ?number): null);
              ^^^^^^ [1]

References:
   error.js:9:18
   9| ((any: ?number): null);
                       ^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- error.js:10:8

Cannot cast `any` to undefined because null or undefined [1] is incompatible with undefined [2]. [incompatible-cast]

   error.js:10:8
   10| ((any: ?number): void);
              ^^^^^^^ [1]

References:
   error.js:10:18
   10| ((any: ?number): void);
                        ^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- error.js:10:9

Cannot cast `any` to undefined because number [1] is incompatible with undefined [2]. [incompatible-cast]

   error.js:10:9
   10| ((any: ?number): void);
               ^^^^^^ [1]

References:
   error.js:10:18
   10| ((any: ?number): void);
                        ^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- error.js:16:8

Cannot cast `any` to union type because null or undefined [1] is incompatible with null [2]. [incompatible-cast]

   error.js:16:8
   16| ((any: ?number): number | null);
              ^^^^^^^ [1]

References:
   error.js:16:27
   16| ((any: ?number): number | null);
                                 ^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- error.js:17:8

Cannot cast `any` to union type because null or undefined [1] is incompatible with undefined [2]. [incompatible-cast]

   error.js:17:8
   17| ((any: ?number): number | void);
              ^^^^^^^ [1]

References:
   error.js:17:27
   17| ((any: ?number): number | void);
                                 ^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- maybe.js:5:11

Cannot cast `123` to nullable string because number [1] is incompatible with string [2]. [incompatible-cast]

   maybe.js:5:11
   5| ((123: ?(?number)): ?string); // error (only num ~> string)
                ^^^^^^ [1]

References:
   maybe.js:5:22
   5| ((123: ?(?number)): ?string); // error (only num ~> string)
                           ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- nullable.js:1:32

Cannot return `null` because null [1] is incompatible with string [2]. [incompatible-return]

   nullable.js:1:32
   1| function foo():string { return null; }
                                     ^^^^ [1]

References:
   nullable.js:1:16
   1| function foo():string { return null; }
                     ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ nullable.js:11:22

Cannot call `corge` with `x` bound to `x` because string [1] is incompatible with number [2]. [incompatible-call]

   nullable.js:11:22
   11| if (x != null) corge(x); // x: ?string | null
                            ^

References:
   nullable.js:3:17
    3| function bar():?string { return null; }
                       ^^^^^^ [1]
   nullable.js:7:18
    7| function corge(x:number) { }
                        ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ nullable.js:15:17

Cannot call `qux` with `x` bound to `x` because null [1] is incompatible with string [2]. [incompatible-call]

   nullable.js:15:17
   15|   grault(); qux(x);
                       ^

References:
   nullable.js:13:25
   13| function grault() { x = null; }
                               ^^^^ [1]
   nullable.js:5:16
    5| function qux(x:string) { }
                      ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- simple_nullable.js:4:5

Cannot call `bar` with `'hmm'` bound to `x` because string [1] is incompatible with number [2]. [incompatible-call]

   simple_nullable.js:4:5
   4| bar('hmm');
          ^^^^^ [1]

References:
   simple_nullable.js:2:17
   2| function bar(x:?number) {}
                      ^^^^^^ [2]



Found 12 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
